[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
macros = { path = "../macros" }


tracing = { version = "0.1.41", features = ["log"] }
git2 = "0.20.0"
chrono = "0.4.39"
uuid = { version = "1.13.2", features = ["v4"] }

[build-dependencies]
git2 = "0.20.0"
chrono = "0.4.39"